# Instruments

./: .gitignore  LICENSE  README.md  app.py  conda-requirements.txt  example_client.py  main.py  package-lock.json  package.json  pyproject.toml
evora/: __init__.py  andor.py  andor_errors.py  andor_helper.py  andor_routines.py  andor_wrapper.cpp  app-testBecauseEvoraBroke.py  dummy.py  dummy.py.bak  error_codes.py  evora.py  pyproject.toml  routines.py  setup.py
evora/andor/: Makefile  andor_simple.cpp  andor_test.py  andor_wrapper.cpp  andorbind.cpp  dummy.py
evora/common/utils/: fits.py
evora/tests/: andor_test.py  andor_test.py.bak  small_test.py
fits_files/: info.txt
my-app/: package-lock.json  package.json
my-app/src/: index.js
server/: .gitignore  FilterMotor.py  andor_routines.py  app.py  dummy_fw.py  fw_server.py  setup.py
server/evora/: andor_dummy.py  andor_wrapper.cpp  dummy.py  dummy_fw.py  routines.py
server/evora_old/: __init__.py  andor.py  andor_wrapper.cpp  app-testBecauseEvoraBroke.py  error_codes.py
server/static/fits_files/: info.txt
static/: temperature.js
templates/: index.html  temperatureDisplay.html
uwmro-client/: package-lock.json  package.json
uwmro-client/public/: coma.fits  index.html
uwmro-client/public/js9/: Makefile
uwmro-client/src/: App.css  App.js  apiClient.js  index.js  setupProxy.js
uwmro-client/src/components/: DownloadCapture.jsx  ExposureControls.jsx  FilterControls.jsx  GetTemp.jsx  ImageTypeSelector.jsx  PingServer.jsx  SetExposureType.jsx  SetTemp.jsx  TempControls.jsx
(+5 files in other folders)
